# OMP_dbus_configurationManager

./: .clang-format  CMakeLists.txt  README.md
apps/confManagerApplication1/: CMakeLists.txt  TimeoutApp.cpp  TimeoutApp.hpp  TimeoutAppDBusProxy.cpp  TimeoutAppDBusProxy.hpp  main.cpp
apps/confManagerApplication1/configs/: confManagerApplication1.json
cmake/: GenerateSDBusInterfaces.cmake
configs/: music_player.json  notes_app.json  weather_app.json
include/: Application.hpp  ApplicationDBusAdapter.hpp  ConfigurationManagerService.hpp  configurationApplicationAdapter.hpp  configurationManagerService.hpp
interfaces/: com.system.configurationManager.Application.Configuration.xml
src/: ApplicationDBusAdapter.cpp  CMakeLists.txt  ConfigurationManagerService.cpp  configurationManagerService.cpp  main.cpp
